infra/pi-hole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnsmasq
  namespace: pi-hole
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: dnsmasq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dnsmasq
    spec:
      tolerations:
        - key: location
          value: external
          effect: NoSchedule
      nodeName: kani
      containers:
        - name: dnsmasq
          image: "joshuachp/dnsmasq:0.1.1@sha256:85de4ed07d8401120b9bef0290bf78b2b3d46758d7cfe6320be4d90cb6e3b9d2"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              cpu: "10m"
              memory: "10Mi"
          ports:
            - name: dns
              containerPort: 53
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: "/etc/dnsmasq.d/"
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: config
          configMap:
            name: dnsmasq
            optional: false
      securityContext:
        runAsUser: 100
        runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  name: dns
  namespace: pi-hole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.3.1
    metallb.universe.tf/address-pool: external-pool
spec:
  selector:
    app.kubernetes.io/name: dnsmasq
  type: LoadBalancer
  ports:
    - name: dns
      port: 8080
      protocol: UDP
      targetPort: 53
