infra/pi-hole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-hole
  namespace: pi-hole
spec:
  ingressClassName: nginx
  rules:
    - host: pi-hole.k.joshuachp.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pi-hole
                port:
                  name: web
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pi-hole
  namespace: pi-hole
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`pi-hole.k.joshuachp.dev`)"
      kind: Rule
      services:
        - name: pi-hole
          port: web
  tls:
    domains:
      - main: k.joshuachp.dev
        sans:
          - "*.k.joshuachp.dev"
